--- a/modules/swagger-codegen/pom.xml
+++ b/modules/swagger-codegen/pom.xml
@@ -308,14 +308,27 @@
             <version>2.24.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- generators 
         <dependency>
             <groupId>io.swagger.codegen.v3</groupId>
             <artifactId>swagger-codegen-generators</artifactId>
             <version>${swagger-codegen-generators-version}</version>
-            <scope>test</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>com.github.emavgl</groupId>
+            <artifactId>swagger-codegen-generators</artifactId>
+                <version>master-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <repositories>
+        <repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+		</repository>
         <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
